# sda_morning_bot

./: .dockerignore  README.md  docker-compose.yml  env.example  makemigrations.sh  manage.py  manage.sh  pyproject.toml  requirements.txt
bot/: apps.py  bot.py  keyboards.py  models.py  signals.py  tasks.py  utils.py
bot/handlers/: __init__.py  messages.py  settings.py  start.py
bot/management/commands/: run_bot.py
bot/templates/: __init__.py  translations.py
bot/templates/messages/en/: book_selected.html  cancel.html  error_generic.html  error_no_book.html  error_no_inspirations.html  error_no_settings.html  error_not_registered.html  help.html  inspiration_message.html  language_selected.html  location_received.html  location_skipped.html  no_active_operation.html  no_books.html  profile.html  random_day.html  request_location.html  select_book.html  select_book_language.html  select_language.html  select_timezone.html  set_time.html  settings.html  start.html  start_existing_user.html  start_new_user.html  time_invalid.html  time_saved.html  timezone_selected.html  unknown_command.html
bot/templates/messages/ru/: book_selected.html  (+29 more)
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  constants.py  models.py  parsers.py
core/management/commands/: parse_book.py
core/migrations/: 0001_initial.py  0002_remove_usersettings_time_window_minutes.py  0003_add_timezone_to_usersettings.py
docker/: Dockerfile
docker/config/: gunicorn.conf.py
docker/scripts/: bot.sh  celery-beat.sh  celery-worker.sh  server.sh
(+30 files in other folders)
