[project]
name = "asd-morning-bot"
version = "0.1.0"
description = "Django project with Telegram bot and Celery scheduling"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0,<6.0",
    "aiogram>=3.0,<4.0",
    "celery[redis]>=5.3.0",
    "python-dotenv>=1.0.0",
    "django-celery-beat>=2.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
]
parser = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "bot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "bot"]

[tool.black]
line-length = 100
target-version = ["py310"]

